# bda-svc

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/bda_svc/: __init__.py  app.py  cli.py  config.yaml  constants.py  export.py  inputs.py  model.py  train.py  utilities.py
src/bda_svc/docker/: Dockerfile
src/bda_svc/pipeline/: __init__.py  config.yaml  doctrine.yaml  model.py  utilities.py
src/tests/: test_app.py
tests/: test_app.py
