[project]
name = "bda-svc"
version = "0.1.0"
description = "Package for autonomous battle damage assessment"
readme = "README.md"
authors = [
    { name = "Iggy Siegel", email = "iggysiegel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.6.1",
]

[project.scripts]
bda-svc = "bda_svc.app:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "D",
]
ignore = [
    "D203",
    "D213",
    "D401",
    "D413",
    "E501",
]
